--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.6.0",
     "request": "^2.88.2",
     "router": "^1.3.7"
   },
