--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongodb": "^5.7.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
     "request": "^2.88.2",
