--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
-{
-  "dependencies": {
+
+{  "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mongodb": "^5.7.0",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.22",
+    "path": "^0.12.7",
     "mysql2": "^3.6.0",
     "request": "^2.88.2",
     "router": "^1.3.7"
